; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_action.c_kperf_ast_pend.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kperf/extr_action.c_kperf_ast_pend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"pending to non-current thread\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kperf_ast_pend(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = call i64 (...) @current_thread()
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 @panic(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @kperf_get_thread_flags(i64 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %5, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %28, label %19

19:                                               ; preds = %12
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %6, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %6, align 4
  %23 = load i64, i64* %4, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @kperf_set_thread_flags(i64 %23, i32 %24)
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @act_set_kperf(i64 %26)
  store i32 1, i32* %3, align 4
  br label %29

28:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %19
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @current_thread(...) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @kperf_get_thread_flags(i64) #1

declare dso_local i32 @kperf_set_thread_flags(i64, i32) #1

declare dso_local i32 @act_set_kperf(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
